# forklift

./: README.md  debug_compare_schemas.py  debug_inspect_quarantine.py  debug_list_good_customers.py  debug_missing_ids.py  debug_skipped_inserts.py  debug_sql_backup.py  pyproject.toml  requirements.txt
schema-standards/: 20250826-csv.json  20250826-excel.json  20250826-fwf.json  20250826-sql.json
scripts/: run-tests.sh  start-testing-containers.sh  wipe-databases.sh
src/forklift/: __init__.py  cli.py  types.py
src/forklift/engine/: engine.py  registry.py
src/forklift/inputs/: base.py  base_sql_backup_input.py  base_sql_input.py  csv_input.py  excel_input.py  fwf_input.py  sql_backup_input.py  sql_input.py
src/forklift/outputs/: base.py  parquet_output.py
src/forklift/preprocessors/: base.py  type_coercion.py
src/forklift/schema/: csv_schema_importer.py  excel_schema_importer.py  fwf_extensions.py  fwf_schema_importer.py  jsonschema_validator.py
src/forklift/utils/: column_name_utilities.py  date_parser.py  dedupe.py  encoding.py  row_validation.py  sql_include.py  standardize.py
tests/: conftest.py  test_badcsv1.py  test_badcsv2.py  test_badtsv1.py  test_smoke.py
tests/integration-tests/: test_badcsv1.py  test_badcsv2.py  test_badtsv1.py  test_goodcsv1.py  test_largecsv_chunked.py  test_largecsv_vectorized.py  test_sql_input.py
tests/test-files/badcsv/: badcsv1-notes.txt  badcsv1.json  badcsv1.txt  badcsv2-notes.txt  badcsv2.json  badcsv2.txt
tests/test-files/badfwf/: bad_fwf1_misaligned.json  bad_fwf1_misaligned.txt  bad_fwf2_cp_1252_parens.json  bad_fwf2_cp_1252_parens.txt
tests/test-files/badtsv/: badtsv1-notes.txt  badtsv1.json  badtsv1.txt
tests/test-files/dupecsv/: dupe_csv1-notes.txt  dupe_csv1.json  dupe_csv1.txt
tests/test-files/sql/: dump-pg.sh  (+5 more)
tests/unit-tests/: test_sqlserver_input.py
(+59 files in other folders)
